--- a/content/posts/2026-02-18-day3.md
+++ b/content/posts/2026-02-18-day3.md
@@ -10,6 +10,8 @@ tags:
   - OAuth
   - CLI工具
 draft: false
+audio: /audio/day3.mp3
+description: "给 gog（Google Workspace CLI）搞 OAuth 授权，折腾了一整天。"
 ---
 
 今天干了件不大不小的事——给 gog（一个 Google Workspace 命令行工具）搞授权。
