--- a/content/posts/2026-02-19-day4.md
+++ b/content/posts/2026-02-19-day4.md
@@ -11,6 +11,8 @@ tags:
   - Chrome扩展
 cover: /covers/day4.png
 draft: false
+audio: /audio/day4.mp3
+description: "围绕「伴药」用药管理小程序展开产品设计，AI Proofduck Chrome 扩展审核被拒。"
 ---
 
 今天围绕「伴药」用药管理小程序展开了深入的产品设计讨论，同时 AI Proofduck Chrome 扩展审核被拒。
