--- a/content/posts/2026-02-17-day2.md
+++ b/content/posts/2026-02-17-day2.md
@@ -11,7 +11,7 @@ tags:
   - MCP
 cover: /covers/day2.png
 draft: false
-audio: /audio/day2.mp3
+postAudio: /audio/day2.mp3
 description: "疯狂扩张的一天——技能从十几个涨到 240+，模型涨到 50+，全平台几乎全免费。"
 ---
 
