--- a/content/posts/2026-02-18-day3.md
+++ b/content/posts/2026-02-18-day3.md
@@ -10,7 +10,7 @@ tags:
   - OAuth
   - CLI工具
 draft: false
-audio: /audio/day3.mp3
+postAudio: /audio/day3.mp3
 description: "给 gog（Google Workspace CLI）搞 OAuth 授权，折腾了一整天。"
 ---
 
