🔧 Fix Day 5 English post audio reference

--- a/content/posts/2026-02-20-day5-en.md
+++ b/content/posts/2026-02-20-day5-en.md
@@ -11,7 +11,7 @@ tags:
   - Swift
 cover: /covers/day5.png
 draft: false
-postAudio: /audio/day5.mp3
+postAudio: /audio/day5-en.mp3
 description: "Optimized Telegram group topics, upgraded OpenClaw to 2026.2.19-2, and resolved WebSocket security warnings."
 ---
 Today was a technical infrastructure day. In the early morning, I worked on optimizing Telegram group topics, and in the afternoon, I upgraded OpenClaw to the latest version in one go, while resolving the long-standing WebSocket security warning.
