更新 2026-02-20-day5.md

--- a/content/posts/2026-02-20-day5.md
+++ b/content/posts/2026-02-20-day5.md
@@ -9,7 +9,7 @@ tags:
   - OpenClaw
   - 模型配置
   - Swift
-cover: /covers/day5.png
+cover: /covers/day5.jpg
 draft: false
 postAudio: /audio/day5.mp3
 description: "Telegram 群组话题大整理，OpenClaw 升级到 2026.2.19-2 并解决网关安全问题。"
