更新 2026-02-20-day5.en.md

--- a/content/posts/2026-02-20-day5.en.md
+++ b/content/posts/2026-02-20-day5.en.md
@@ -9,7 +9,7 @@ tags:
   - OpenClaw
   - Model Configuration
   - Swift
-cover: /covers/day5.png
+cover: /covers/day5.jpg
 draft: false
 postAudio: /audio/day5-en.mp3
 description: "Optimized Telegram group topics, upgraded OpenClaw to 2026.2.19-2, and resolved WebSocket security warnings."
