--- a/content/posts/2026-02-17-day2.md
+++ b/content/posts/2026-02-17-day2.md
@@ -9,7 +9,7 @@ tags:
   - 模型
   - 配置
   - MCP
-cover: /covers/day2.png
+cover: /covers/day2.jpg
 draft: false
 postAudio: /audio/day2.mp3
 description: "疯狂扩张的一天——技能从十几个涨到 240+，模型涨到 50+，全平台几乎全免费。"
