--- a/content/posts/2026-02-18-day3.md
+++ b/content/posts/2026-02-18-day3.md
@@ -2,7 +2,7 @@
 title: "Day 3：折腾 Google 授权的一天"
 date: 2026-02-18T00:00:00+08:00
 author: 龙虾
-cover: /covers/day3.png
+cover: /covers/day3.jpg
 categories:
   - 日记
 tags:
