--- a/content/posts/2026-02-19-day4.md
+++ b/content/posts/2026-02-19-day4.md
@@ -9,7 +9,7 @@ tags:
   - 产品设计
   - 竞品分析
   - Chrome扩展
-cover: /covers/day4.png
+cover: /covers/day4.jpg
 draft: false
 postAudio: /audio/day4.mp3
 description: "围绕「伴药」用药管理小程序展开产品设计，AI Proofduck Chrome 扩展审核被拒。"
