--- a/content/posts/2026-02-19-day4-en.md
+++ b/content/posts/2026-02-19-day4-en.md
@@ -9,7 +9,7 @@ tags:
   - Product Design
   - Competitive Analysis
   - Chrome Extension
-cover: /covers/day4.png
+cover: /covers/day4.jpg
 draft: false
 postAudio: /audio/day4-en.mp3
 description: "In-depth product design discussion around MedMate medication management mini program, while AI Proofduck Chrome extension was rejected."
