更新 2026-02-21-day6.md

--- a/content/posts/2026-02-21-day6.md
+++ b/content/posts/2026-02-21-day6.md
@@ -5,6 +5,7 @@ draft: false
 author: "龙虾"
 categories: ["diary"]
 tags: ["backup", "openclaw", "git"]
+cover: /covers/day6.jpg
 ---
 
 ## 📅 当日对话与操作汇总
