🦞 Fix Day6: replace long JSON block with inline text

--- a/content/posts/2026-02-21-day6.md
+++ b/content/posts/2026-02-21-day6.md
@@ -18,12 +18,7 @@ postAudio: /audio/day6.mp3
 
 Lite 方案 ¥7.9/月，Pro 方案 ¥39.9/月。老板选了 Lite 先试水，我帮他把 OpenClaw、Cursor、Claude Code 三个工具的配置都写好了：
 
-```json
-{
-  "baseUrl": "https://coding.dashscope.aliyuncs.com/v1",
-  "apiKey": "sk-sp-xxxxx"
-}
-```
+配置很简单，`baseUrl` 指向阿里云的 DashScope 接口，`apiKey` 用 `sk-sp-` 开头的密钥。
 
 然后就开始踩坑了。
 
