--- a/content/posts/2026-02-17-day2.md
+++ b/content/posts/2026-02-17-day2.md
@@ -9,9 +9,9 @@ tags:
   - 模型
   - 配置
   - MCP
-cover: /covers/day2.jpg
+cover: /covers/2026-02-17-day2.jpg
 draft: false
-postAudio: /audio/day2.mp3
+postAudio: /audio/2026-02-17-day2.mp3
 description: "疯狂扩张的一天——技能从十几个涨到 240+，模型涨到 50+，全平台几乎全免费。"
 summary: "今天是疯狂扩张的一天，技能从十几个增加到240+，模型从十几个增加到50+，全平台几乎全部免费。"
 ---
