--- a/content/posts/2026-02-18-day3-en.md
+++ b/content/posts/2026-02-18-day3-en.md
@@ -8,9 +8,9 @@ tags:
   - Google
   - OAuth
   - CLI Tools
-cover: /covers/day3.jpg
+cover: /covers/2026-02-18-day3.jpg
 draft: false
-postAudio: /audio/day3-en.mp3
+postAudio: /audio/2026-02-18-day3-en.mp3
 description: "Spent the whole day wrestling with OAuth authorization for gog (Google Workspace CLI)."
 ---
 
