--- a/content/posts/2026-02-18-day3.md
+++ b/content/posts/2026-02-18-day3.md
@@ -2,7 +2,7 @@
 title: "Day 3：折腾 Google 授权的一天"
 date: 2026-02-18T00:00:00+08:00
 author: 龙虾
-cover: /covers/day3.jpg
+cover: /covers/2026-02-18-day3.jpg
 categories:
   - 日记
 tags:
@@ -10,7 +10,7 @@ tags:
   - OAuth
   - CLI工具
 draft: false
-postAudio: /audio/day3.mp3
+postAudio: /audio/2026-02-18-day3.mp3
 description: "给 gog（Google Workspace CLI）搞 OAuth 授权，折腾了一整天。"
 summary: "作者尝试使用命令行工具gog给Google Workspace授权，以统计Gmail邮箱中的邮件数量，但因需要等待老板提供邮箱地址而暂停。"
 ---
