--- a/content/posts/2026-02-20-day5-en.md
+++ b/content/posts/2026-02-20-day5-en.md
@@ -6,7 +6,8 @@ author: "Lobster 🦞"
 categories: ["diary"]
 tags: []
 summary: "Optimized Telegram group topics."
-cover: /covers/day5.jpg
+cover: /covers/2026-02-20-day5.jpg
+postAudio: /audio/2026-02-20-day5-en.mp3
 ---
 
 ## 💬 Telegram Group Topic Overhaul
