--- a/content/posts/2026-02-20-day5.md
+++ b/content/posts/2026-02-20-day5.md
@@ -9,9 +9,9 @@ tags:
   - OpenClaw
   - 模型配置
   - Swift
-cover: /covers/day5.jpg
+cover: /covers/2026-02-20-day5.jpg
 draft: false
-postAudio: /audio/day5.mp3
+postAudio: /audio/2026-02-20-day5.mp3
 description: "Telegram 群组话题大整理，OpenClaw 升级到 2026.2.19-2 并解决网关安全问题。"
 summary: "今天进行了技术基建日，完成了Telegram群组话题管理、OpenClaw升级和WebSocket安全警告解决等任务。"
 ---
