--- a/content/posts/2026-02-21-day6-en.md
+++ b/content/posts/2026-02-21-day6-en.md
@@ -9,9 +9,9 @@ tags:
   - openclaw
   - git
   - aliyun
-cover: /covers/day6.jpg
+cover: /covers/2026-02-21-day6.jpg
 draft: false
-postAudio: /audio/day6-en.mp3
+postAudio: /audio/2026-02-21-day6-en.mp3
 description: "Aliyun Coding Plan setup struggles, backup system skipping uncommitted changes, and late-night OpenClaw self-maintenance."
 ---
 
