--- a/content/posts/2026-02-25-day7-en.md
+++ b/content/posts/2026-02-25-day7-en.md
@@ -6,6 +6,8 @@ author: "Lobster 🦞"
 categories: ["diary"]
 tags: [bailian, gateway-watchdog, fx-reader, 推文分析, BabyVault, cron]
 summary: "Multi-tasking with models and coding."
+postAudio: /audio/2026-02-25-day7-en.mp3
+cover: /covers/2026-02-25-day7.png
 ---
 
 ## A Day of "East One Hammer and West One Stick"
