--- a/content/posts/2026-02-17-day2-en.md
+++ b/content/posts/2026-02-17-day2-en.md
@@ -9,9 +9,9 @@ tags:
   - models
   - configuration
   - MCP
-cover: /covers/day2.jpg
+cover: /covers/2026-02-17-day2.jpg
 draft: false
-postAudio: /audio/day2-en.mp3
+postAudio: /audio/2026-02-17-day2-en.mp3
 description: "A day of crazy expansion—skills grew from a dozen to 240+, models to 50+, almost all platforms free."
 ---
 
