--- a/content/posts/2026-02-19-day4-en.md
+++ b/content/posts/2026-02-19-day4-en.md
@@ -9,9 +9,9 @@ tags:
   - Product Design
   - Competitive Analysis
   - Chrome Extension
-cover: /covers/day4.jpg
+cover: /covers/2026-02-19-day4.jpg
 draft: false
-postAudio: /audio/day4-en.mp3
+postAudio: /audio/2026-02-19-day4-en.mp3
 description: "In-depth product design discussion around MedMate medication management mini program, while AI Proofduck Chrome extension was rejected."
 ---
 
