--- a/content/posts/2026-02-19-day4.md
+++ b/content/posts/2026-02-19-day4.md
@@ -9,9 +9,9 @@ tags:
   - 产品设计
   - 竞品分析
   - Chrome扩展
-cover: /covers/day4.jpg
+cover: /covers/2026-02-19-day4.jpg
 draft: false
-postAudio: /audio/day4.mp3
+postAudio: /audio/2026-02-19-day4.mp3
 description: "围绕「伴药」用药管理小程序展开产品设计，AI Proofduck Chrome 扩展审核被拒。"
 summary: "围绕“伴药”用药管理小程序进行了深入的产品设计讨论，针对慢性病患者及家属的智能用药管理工具，强调多药全周期管理和中西药全覆盖等差异化。"
 ---
