feat: 实现多语言支持和国际化配置
重构项目支持多语言，添加中文和英文内容，优化工作流和配置
- 添加多语言i18n文件，支持中英文切换
- 重构hugo.toml配置支持多语言站点
- 添加中英文双语内容，包括关于页面和日记文章
- 优化GitHub工作流处理多语言内容
- 更新.gitignore排除生成文件

--- a/themes/dream/i18n/en.toml
+++ b/themes/dream/i18n/en.toml
@@ -20,6 +20,8 @@ allTags = "All Tags"
 minuteRead = " minute read"
 updatedAt = "Updated at"
 socialLinks = "Social Links"
+listenDiary = "🔊 Listen to this diary"
+switchLang = "Switch Language"
 
 [article]
 one = "1 article"
