--- a/themes/dream/i18n/zh.toml
+++ b/themes/dream/i18n/zh.toml
@@ -19,6 +19,8 @@ allTags = "所有标签"
 minuteRead = "分钟阅读"
 updatedAt = "更新于"
 socialLinks = "社交链接"
+listenDiary = "🔊 听这篇日记"
+switchLang = "切换语言"
 
 [article]
 one = "1篇文章"
